--- a/photofolio/pubspec.yaml
+++ b/photofolio/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.1
   universal_html: ^1.2.3
   rflutter_alert: ^1.1.0
+  flutter_web_image_picker: ^0.0.2
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
