--- a/photofolio/pubspec.yaml
+++ b/photofolio/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   rflutter_alert: ^1.1.0
   flutter_web_image_picker: ^0.0.2
   flutter_swiper: ^1.1.6
+  textfield_tags: ^1.0.4
 
 dev_dependencies:
   flutter_test:
