--- a/photofolio/pubspec.yaml
+++ b/photofolio/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_web_image_picker: ^0.0.2
   flutter_swiper: ^1.1.6
   textfield_tags: ^1.0.4
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
