--- a/photofolio/pubspec.yaml
+++ b/photofolio/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_swiper: ^1.1.6
   textfield_tags: ^1.0.4
   provider: ^4.3.2+2
+  http: ^0.12.2
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
