--- a/photofolio/pubspec.yaml
+++ b/photofolio/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   textfield_tags: ^1.0.4
   provider: ^4.3.2+2
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/signup_img.jpg
+    - assets/PhotoFolioKR.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
