--- a/photofolio/pubspec.yaml
+++ b/photofolio/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.12.2
   url_launcher: ^5.7.10
   validators: ^2.0.1
+  image_picker_web_redux: ^ 1.1.3
 
 dev_dependencies:
   flutter_test:
