--- a/photofolio/pubspec.yaml
+++ b/photofolio/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.12.2
   url_launcher: ^5.7.10
   validators: ^2.0.1
+  file_picker_web: ^1.0.0
 
 dev_dependencies:
   flutter_test:
