--- a/photofolio/pubspec.yaml
+++ b/photofolio/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   http: ^0.12.2
   url_launcher: ^5.7.10
   validators: ^2.0.1
-  file_picker_web: ^1.0.0
+  
+  dio: ^3.0.10
+  file_picker: ^2.1.4
 
 dev_dependencies:
   flutter_test:
