add expended_tabs for navigating user activity section and flutter_quill for text editor

--- a/photofolio/pubspec.yaml
+++ b/photofolio/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http_parser: ^3.1.4
   dio: ^3.0.10
   file_picker: ^2.1.4
+  extended_tabs: ^1.0.1
+  flutter_quill: ^0.1.5
 
 dev_dependencies:
   flutter_test:
