--- a/photofolio/pubspec.yaml
+++ b/photofolio/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   file_picker: ^2.1.4
   extended_tabs: ^1.0.1
   flutter_quill: ^0.1.5
+  photo_view: ^0.10.3
 
 dev_dependencies:
   flutter_test:
