--- a/photofolio/web/manifest.json
+++ b/photofolio/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "PF",
+    "name": "PHOTOFOLIO",
     "short_name": "PF",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0212121",
-    "theme_color": "#0212121",
+    "background_color": "#212121",
+    "theme_color": "#212121",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
